--- a/djforms/templates/djforms/base.html
+++ b/djforms/templates/djforms/base.html
@@ -34,9 +34,7 @@
                 <!-- Button (Right side) -->
                 <div class="col-sm">
                     {% block nav-btn %}
-                    <a href="#" class="btn btn-sm text-light" id="btn-nav">LOGIN</a>
-                    <a href="#" class="btn btn-sm text-light" id="btn-nav">CLIENTS</a>
-                    <a href="#" class="btn btn-sm text-light" id="btn-nav">LAWYERS</a>
+                    <a href="#" class="btn btn-sm text-light" id="btn-nav">FORMS</a>
                     {% endblock %}
                 </div>
             </nav>
