--- a/djforms/templates/djforms/index.html
+++ b/djforms/templates/djforms/index.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %} {% load static %}
+{% extends 'djforms/base.html' %} {% load static %}
 
 <!-- Page content -->
 {% block content %}
-<section class="vh-100" style="background-color: #eee">
-  <div class="container MT-5">
+<section >
+  <div class="container mt-5">
     <h3 class="mb-2">DJANGO CRISPY FORMS</h3>
   </div>
 </section>
