--- a/djforms/templates/djforms/forms.html
+++ b/djforms/templates/djforms/forms.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static %}
+{% extends 'djforms/base.html' %} {% load static %}
 
 <!-- Page content -->
 {% block content %}
