--- a/djforms/templates/djforms/forms.html
+++ b/djforms/templates/djforms/forms.html
@@ -2,8 +2,8 @@
 
 <!-- Page content -->
 {% block content %}
-<section class="vh-100" style="background-color: #eee">
-  <div class="container MT-5">
+<section>
+  <div class="container">
     <h3 class="mb-2">DJANGO CRISPY FORMS</h3>
   </div>
 </section>
