--- a/djforms/templates/djforms/index.html
+++ b/djforms/templates/djforms/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <section >
   <div class="container mt-5">
-    <h3 class="mb-2">DJANGO CRISPY FORMS</h3>
+    <h3 class="mb-2">HOME PAGE</h3>
   </div>
 </section>
 {% endblock content %}
