--- a/djforms/templates/djforms/base.html
+++ b/djforms/templates/djforms/base.html
@@ -34,7 +34,7 @@
                 <!-- Button (Right side) -->
                 <div class="col-sm">
                     {% block nav-btn %}
-                    <a href="{% url 'forms' %}" class="text-light" id="btn-nav">FORMS</a>
+                    <a href="{% url 'forms' %}" class="navbar-brand flex-grow-1 text-center text-light">FORMS</a>
                     {% endblock %}
                 </div>
             </nav>
