--- a/djforms/templates/djforms/index.html
+++ b/djforms/templates/djforms/index.html
@@ -3,7 +3,7 @@
 <!-- Page content -->
 {% block content %}
 <section >
-  <div class="container mt-5">
+  <div class="container">
     <h3 class="mb-2">HOME PAGE</h3>
   </div>
 </section>
