--- a/djforms/templates/djforms/base.html
+++ b/djforms/templates/djforms/base.html
@@ -35,23 +35,23 @@
         </div>
 
     </div>
-</nav><br/><br /><br />
+</nav>
         <!-- ===== Block Content (ROOT) ===== -->
-
+<div class="mt-5">
         {% block content %} 
         
         {% endblock content %}
+</div>
 
     <!-- Footer -->
-    {% comment %} <footer class="bg-dark text-center text-lg-start text-light fixed-bottom" id="footer">
+    <footer class="bg-dark text-center text-lg-start text-light fixed-bottom" id="footer">
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             &copy; {% now "Y" %} Copyright:
             <a class="text-light" href="#" style="text-decoration: none;">
-                <span {% block footer %} style="color: greenyellow;" {% endblock %}>www.your-website.com</span>
+                <span {% block footer %} style="color: greenyellow;" {% endblock %}>www.yoletech.com</span>
             </a>
         </div>
-    </footer> {% endcomment %}
-
+    </footer>
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
