--- a/djforms/templates/djforms/forms.html
+++ b/djforms/templates/djforms/forms.html
@@ -1,10 +1,36 @@
-{% extends 'djforms/base.html' %} {% load static %}
+{% extends 'djforms/base.html' %} 
+{% load static %}
+{% load crispy_forms_tags %}
 
 <!-- Page content -->
 {% block content %}
 <section>
-  <div class="container">
-    <h3 class="mb-2">DJANGO CRISPY FORMS</h3>
-  </div>
+<div class="container" style="width: 95%; font-size: 14px">
+ <form method="POST" class="card p-3 shadow" autocomplete="off" novalidate>
+ {% csrf_token %}
+    {% comment %} {{ form|crispy }} {% endcomment %}
+      <div class="row">
+         <div class="col-6">{{ form.firstname|as_crispy_field }}</div>
+         <div class="col-6">{{ form.lastname|as_crispy_field }}</div>
+      </div>
+       <div class="row">
+       <div class="col-6">{{ form.email|as_crispy_field }}</div>
+       <div class="col-6">{{ form.age|as_crispy_field }}</div>
+      </div>
+      {{ form.message|as_crispy_field }}
+    <button type="submit" class="btn btn-outline-primary mt-3" style="width: 90px;">Submit</button>
+ </form>
+
+<!-- Message from backend -->
+{% for message in messages %}
+  {% if message.tags == 'success' %}
+    <div class="text-center alert alert-primary alert-dismissible fade show" role="alert">
+      {{message}}
+      <a href="{% url 'forms' %}" type="button" class="btn btn-close" data-bs-dismiss="alert" aria-label="close"></a>
+    </div>
+  {% endif %}
+{% endfor %}
+
+</div>
 </section>
 {% endblock content %}
